// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs breadcrumbsが空の場合、何も表示されないこと 1`] = `null`;

exports[`Breadcrumbs breadcrumbsの要素が1つの場合、1つだけ表示されること 1`] = `
<nav
  aria-label="Breadcrumb"
>
  <ol
    className="mx-auto flex max-w-2xl items-center space-x-2 px-4 sm:px-6 lg:max-w-7xl lg:px-8"
    role="list"
  >
    <li
      className="text-sm"
    >
      <a
        aria-current="page"
        className="font-medium text-gray-500 hover:text-gray-600"
        href="#"
      >
        おもちゃ
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs breadcrumbsの要素が複数の場合、全て表示されること 1`] = `
<nav
  aria-label="Breadcrumb"
>
  <ol
    className="mx-auto flex max-w-2xl items-center space-x-2 px-4 sm:px-6 lg:max-w-7xl lg:px-8"
    role="list"
  >
    <li>
      <div
        className="flex items-center"
      >
        <a
          className="mr-2 text-sm font-medium text-gray-900"
          href="#"
        >
          おもちゃ
        </a>
        <svg
          aria-hidden="true"
          className="h-5 w-4 text-gray-300"
          fill="currentColor"
          height={20}
          viewBox="0 0 16 20"
          width={16}
        >
          <path
            d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z"
          />
        </svg>
      </div>
    </li>
    <li>
      <div
        className="flex items-center"
      >
        <a
          className="mr-2 text-sm font-medium text-gray-900"
          href="#"
        >
          赤ちゃん・幼児
        </a>
        <svg
          aria-hidden="true"
          className="h-5 w-4 text-gray-300"
          fill="currentColor"
          height={20}
          viewBox="0 0 16 20"
          width={16}
        >
          <path
            d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z"
          />
        </svg>
      </div>
    </li>
    <li>
      <div
        className="flex items-center"
      >
        <a
          className="mr-2 text-sm font-medium text-gray-900"
          href="#"
        >
          お風呂用
        </a>
        <svg
          aria-hidden="true"
          className="h-5 w-4 text-gray-300"
          fill="currentColor"
          height={20}
          viewBox="0 0 16 20"
          width={16}
        >
          <path
            d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z"
          />
        </svg>
      </div>
    </li>
    <li
      className="text-sm"
    >
      <a
        aria-current="page"
        className="font-medium text-gray-500 hover:text-gray-600"
        href="#"
      >
        あひるちゃん 5羽セット
      </a>
    </li>
  </ol>
</nav>
`;
